# ngx

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  config.json.example  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ai-code-review.yml  build-container.yml  ci.yml  claude-review.yml  deploy.yml  format-lint.yml  migrate.yml  terraform.yml  unit-tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: a1b2c3d4e5f6_topology_tables.py  b2c3d4e5f6a7_catalog_tables.py  c3d4e5f6a7b8_provisioning_tables.py  c629c1fa2679_identity_tables.py  d4e5f6a7b8c9_e3_deployment_status_values.py
db/: seed.json.example  seed.py
docs/: DECISIONS.md  ERD.md  PLAN.md  SPEC.md  observability.md
docs/diagrams/: NGX_Networking.drawio  NGX_Networkinig.drawio  async-provisioning.drawio
docs/runbooks/: real-aws-provisioning.md
infrastructure/: .tflint.hcl  README.md
infrastructure/bootstrap/: .gitignore  README.md  main.tf  variables.tf
infrastructure/dev/: .gitignore  backend.tf  main.tf  moved.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/: .gitignore
infrastructure/modules/alb/: main.tf  outputs.tf  variables.tf
infrastructure/modules/alerts/: main.tf  outputs.tf  variables.tf
infrastructure/modules/cache/: main.tf  outputs.tf  variables.tf
infrastructure/modules/cache/tests/: cache.tftest.hcl
infrastructure/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecr/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecr/tests/: lifecycle.tftest.hcl
infrastructure/modules/ecs_service/: main.tf  outputs.tf  variables.tf
infrastructure/modules/kms/: main.tf  outputs.tf  variables.tf
infrastructure/modules/kms/tests/: cmk.tftest.hcl
infrastructure/modules/network/: main.tf  outputs.tf  variables.tf
infrastructure/policies/: ngx-deployer-data-policy.json  ngx-deployer-elasticache-policy.json  ngx-deployer-observability-policy.json  ngx-deployer-platform-policy.json  ngx-deployer-policy.json
scripts/: load_post_resource.py  post_resource.py
src/forge/: __init__.py  __main__.py  config.py  db.py  logging.py  main.py
src/forge/api/: auth.py  catalog.py  deps.py  health.py  me.py  openapi.py  pagination.py  problem_details.py  resources.py
src/forge/api/schemas/: catalog.py  resources.py
src/forge/models/: __init__.py  catalog.py  identity.py  provisioning.py  topology.py
src/forge/workers/: __init__.py  broker.py  registry.py  terraform_runner.py  tier_topology.py  workspace.py
src/forge/workers/tasks/: __init__.py  ping.py  provision_resource.py
tests/: conftest.py
tests/_fake_terraform/: fake_terraform.py
tests/integration/: conftest.py  test_auth.py  test_endpoints.py  test_provisioning_flow_wiring.py  test_resources_flow.py
tests/unit/: _helpers.py  conftest.py  test_auth.py  test_catalog.py  test_config.py  test_db.py  test_health.py  test_logging.py  test_problem_details.py  test_provision_resource.py  test_resources.py  test_root.py  test_terraform_runner.py  test_tier_topology.py  test_version.py  test_workers.py  test_workspace.py
