[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ngx"
version = "0.1.0"
description = "NGX Senior Platform Engineer Challenge - Infrastructure Provisioning Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.2.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.hatch.build.targets.wheel]
packages = ["src/ngx"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=ngx --cov-report=term-missing"
markers = [
    "unit: unit tests (fast, no external dependencies)",
    "integration: integration tests (require database, external services)",
]
